--- a/index.html
+++ b/index.html
@@ -12,6 +12,31 @@
     
 </head>
 <body>
-    <h3>Hello Bangladesh</h3>
+    <section class="home-section">
+        <div class="home-content">
+            <div class="right-content">
+                <h1><span class="skip">Skip</span> The Diet,<br> 
+                    Just Eat Healthy <br>                   
+                    With Food Network</h1>
+                    <p>Imagine you don't need a diet because we provide <br>
+                         healthy and delicious food for you!</p>
+                        <a href="#">Order Food</a>
+            </div>
+            <div class="right-content">
+                <img src="image/women-bg.png" alt="women">
+            </div>
+        </div>
+    </section>
+    <section class="about-me">
+        <div class="about-div">
+        <div class="about-content">
+            <center><img src="image/persion.png" alt=""></center>
+        </div>
+        <div class="about-content">
+            <h1>About Me</h1>
+            <p>I am a Junior Developer. I can create portfolio, ecommerce, education, blog, foody, resturent website with HTML and CSS. If you need a beautiful website, you can contact with me.</p>
+        </div>
+</div>
+    </section>
 </body>
 </html>
