--- a/index.html
+++ b/index.html
@@ -34,9 +34,28 @@
         </div>
         <div class="about-content">
             <h1>About Me</h1>
-            <p>I am a Junior Developer. I can create portfolio, ecommerce, education, blog, foody, resturent website with HTML and CSS. If you need a beautiful website, you can contact with me.</p>
+            <p>I am a Junior Web Developer. I can create portfolio, ecommerce, education, blog, foody, resturent website with HTML and CSS. If you need a beautiful website, you can contact with me.</p>
+            <a href="#">Contact Me</a>
         </div>
 </div>
+    </section>
+    <section class="service">
+        <div class="main-content">
+            <h1>My Recipies</h1>
+            <p>Colorful recipes with seasonal food—often with a twist of lemon. Written by blogging couple Jeanine and Jack, who have also authored a well-received cookbook</p>
+            </div>
+        <div class="service-div">
+           
+            <div class="service-content">
+               <center><img src="image/cover (1).jpg" alt=""></center>
+                <h1>Recipie Title</h1>
+                <p>Colorful recipes with seasonal food—often with a twist of lemon. Written by blogging couple Jeanine and Jack, who have also authored a well-received cookbook</p>
+            </div>
+            <div class="service-content"></div>
+            <div class="service-content"></div>
+
+        </div>
+
     </section>
 </body>
 </html>
