--- a/index.html
+++ b/index.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     <title>Food Network</title>
     
 </head>
 <body>
+    <div class="menubar">
+        <div class="logo">
+            <h1>Food Network</h1>
+        </div>
+        <div class="menu">
+            <ul>
+                <li>Home</li>
+                <li>About Me</li>
+                <li>Blog</li>
+                <li>Contact Us</li>
+                <li>FAQ</li>
+            </ul>
+        </div>
+    </div>
+
     <section class="home-section">
         <div class="home-content">
             <div class="right-content">
@@ -42,7 +57,7 @@
     <section class="service">
         <div class="main-content">
             <h1>My Recipies</h1>
-            <p>Colorful recipes with seasonal food—often with a twist of lemon. Written by blogging couple Jeanine and Jack, who have also authored a well-received cookbook</p>
+            <p>Colorful recipes with seasonal food—often with a twist of lemon. <br>Written by blogging couple Jeanine and Jack, who have also authored a well-received cookbook</p>
             </div>
         <div class="service-div">
            
@@ -51,11 +66,40 @@
                 <h1>Recipie Title</h1>
                 <p>Colorful recipes with seasonal food—often with a twist of lemon. Written by blogging couple Jeanine and Jack, who have also authored a well-received cookbook</p>
             </div>
-            <div class="service-content"></div>
-            <div class="service-content"></div>
+            <div class="service-content">
+                <center><img src="image/cover (2).jpg" alt=""></center>
+                 <h1>Recipie Title</h1>
+                 <p>Colorful recipes with seasonal food—often with a twist of lemon. Written by blogging couple Jeanine and Jack, who have also authored a well-received cookbook</p>
+             </div>
+             <div class="service-content">
+                <center><img src="image/cover (3).png" alt=""></center>
+                 <h1>Soup Special</h1>
+                 <p>Colorful recipes with seasonal food—often with a twist of lemon. Written by blogging couple Jeanine and Jack, who have also authored a well-received cookbook</p>
+             </div>
+        </div>
+
+    </section>
+    <section class="counter">
+        <div class="counter-div">
+            <div class="count-content">
+                <h2>1.3 M</h2>
+                <p>Facebook Follower</p>
+            </div>
+            <div class="count-content">
+                <h2>3.5 M</h2>
+                <p>Instragram Follower</p>
+            </div>
+            <div class="count-content">
+                <h2>1.3 M</h2>
+                <p>Youtube Subscriber</p>
+            </div>
 
         </div>
 
     </section>
+    <footer>
+        <h1>Food Netwark</h1>
+        <h5>© Food Network Limited. All rights reserved.</h5>
+    </footer>
 </body>
 </html>
