--- a/index.html
+++ b/index.html
@@ -12,20 +12,7 @@
     
 </head>
 <body>
-    <div class="menubar">
-        <div class="logo">
-            <h1>Food Network</h1>
-        </div>
-        <div class="menu">
-            <ul>
-                <li>Home</li>
-                <li>About Me</li>
-                <li>Blog</li>
-                <li>Contact Us</li>
-                <li>FAQ</li>
-            </ul>
-        </div>
-    </div>
+
 
     <section class="home-section">
         <div class="home-content">
@@ -34,7 +21,7 @@
                     Just Eat Healthy <br>                   
                     With Food Network</h1>
                     <p>Imagine you don't need a diet because we provide <br>
-                         healthy and delicious food for you!</p>
+                         healthy and delicious food for you!</p><br>
                         <a href="#">Order Food</a>
             </div>
             <div class="right-content">
@@ -50,6 +37,7 @@
         <div class="about-content">
             <h1>About Me</h1>
             <p>I am a Junior Web Developer. I can create portfolio, ecommerce, education, blog, foody, resturent website with HTML and CSS. If you need a beautiful website, you can contact with me.</p>
+            <br>
             <a href="#">Contact Me</a>
         </div>
 </div>
@@ -96,6 +84,23 @@
 
         </div>
 
+    </section>
+    <section class="contact-us">
+        <h1>Contact Us</h1>
+        <form action="POST">
+            
+            <label for="">Name</label>
+            <input type="text"><br>
+            <label for="">Email</label>
+            <input type="email"><br>
+            <label for="">Mobile Number</label>
+            <input type="tel"><br>
+            <label for="">Message</label>
+            <textarea name="message" id="" cols="66" rows="5"></textarea>
+            <br>
+            <br>
+            <a href="#">Submit</a>
+        </form>
     </section>
     <footer>
         <h1>Food Netwark</h1>
